// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Explorer renders 1`] = `
<Explorer
  isVisible={false}
  nodes={Object {}}
  onClose={[Function]}
  path={Array []}
  popPage={[Function]}
  pushPage={[Function]}
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "notify": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "unsubscribe": null,
    }
  }
/>
`;

exports[`Explorer renders 2`] = `<Connect(Explorer) />`;

exports[`Explorer visible 1`] = `
<Explorer
  isVisible={true}
  nodes={
    Object {
      "1": Object {
        "children": Object {
          "count": 0,
          "items": Array [],
        },
        "isError": false,
        "isFetching": true,
        "meta": Object {
          "children": Object {},
        },
      },
    }
  }
  onClose={[Function]}
  path={
    Array [
      1,
    ]
  }
  popPage={[Function]}
  pushPage={[Function]}
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "notify": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "unsubscribe": null,
    }
  }
/>
`;

exports[`Explorer visible 2`] = `
<ExplorerPanel
  nodes={
    Object {
      "1": Object {
        "children": Object {
          "count": 0,
          "items": Array [],
        },
        "isError": false,
        "isFetching": true,
        "meta": Object {
          "children": Object {},
        },
      },
    }
  }
  onClose={[Function]}
  page={
    Object {
      "children": Object {
        "count": 0,
        "items": Array [],
      },
      "isError": false,
      "isFetching": true,
      "meta": Object {
        "children": Object {},
      },
    }
  }
  path={
    Array [
      1,
    ]
  }
  popPage={[Function]}
  pushPage={[Function]}
/>
`;
